# edmkit

./: .gitignore  AGENTS.md  README.md  TESTING-ARCHITECTURE.md  TESTING-CHECKLIST.md  TESTING-TODO.md  TESTING.md  pyproject.toml
.codex/skills/edmkit-testing/: SKILL.md
.codex/skills/python-testing-best-practices/: SKILL.md
.github/workflows/: ci.yaml  deploy-website.yaml  release.yaml
.hypothesis/examples/0034576a834117e0/: 044133a480a9cd85  0964f3bb4f032c8c  1bc81e7a8e7e7bbe  1cbd358389aea977  1e008e88bbcea111  1f0548fe4535f985  35f88e1faa9f3328  367807520711c3cd  38aa3a747435d725  3de528b2ce4dd84a  3e64f59b937bba6d  525617db9c75da96  57c8909d795f8e62  58ea159e481aa3a1  5f0509166c83dbdf  6774887ab59a4432  6d32e618ade67baa  6f38038305c6ed41  72b3f55262965df9  73c6b6d562d33066  75770e80b05e56a7  75c0c6ccdb6758f4  785b5770443201b7  7ce3e424a8ab507e  7f3f06658346da88  9620165cc778cf84  a1d22a9e4ce41ee7  a468f5bab0a85a25  b0462995281909d3  b142be48077c179f  b890364f429a50e6  c3c447bf254bcfec  c507e529c9af7c8b  ce0c476ef9af71a4  ce59c4976acf7ac2  d500112e75351aff  e921351ea8387e26  eb0a9649e021b5f3  f2bbfb72ee564d9a  f865d6d4cdf5b640  (+2 more)
.hypothesis/examples/015eed87cd1f8935/: 57c2b394f6a75b5d
.hypothesis/examples/04e6b3400353b141/: 0034576a834117e0  015eed87cd1f8935  1626189b6bf56f80  2f9ed02cc9a9b0ec  395a28ba25755e0d  39703155baa89285  448afd5883a0eaf1  558e9680d4d7df08  6c1598bf6b713aac  73816d5f0ce8d88e  87e4400695b46fe5  cbb74bebe9817ab8  ce4b009fba8899a8  d22abdc2fe372175  (+2 more)
benchmarks/: bench_knn.py  result.md
src/edmkit/: __init__.py  ccm.py  embed.py  embedding.py  metrics.py  simplex_projection.py  smap.py  splits.py  types.py  util.py
tests/: conftest.py  helpers.py  smoke_test.py  test_ccm.py  test_ccm_property.py  test_ccm_trend.py  test_ccm_unit.py  test_e2e.py  test_embed.py  test_embedding.py  test_embedding_scan_property.py  test_embedding_scan_unit.py  test_embedding_unit.py  test_generate.py  test_generate_trend.py  test_generate_unit.py  test_metrics.py  test_metrics_unit.py  test_nndescent_rpf_unit.py  test_pipeline_integration.py  test_simplex_projection.py  test_simplex_projection_mask.py  test_simplex_projection_mask_property.py  test_simplex_projection_property.py  test_simplex_projection_unit.py  test_smap.py  test_smap_mask.py  test_smap_mask_property.py  test_smap_property.py  test_smap_trend.py  test_smap_unit.py  test_splits.py  test_splits_unit.py  test_util.py  test_util_property.py  test_util_unit.py
website/: README.md  astro.config.mjs  generate_api_reference.py  package.json  pnpm-lock.yaml
(+317 files in other folders)
