[project]
name = "edmkit"
version = "0.0.1-alpha.1"
description = "Simple EDM (Empirical Dynamic Modeling) library"
authors = [{ name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = ["numpy>=2.4.2", "scipy>=1.17.0", "tinygrad>=0.11.0"]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pyedm>=2.3.2",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "tabulate>=0.9.0",
    "ty>=0.0.14",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring tinygrad tensor backend (deselect with '-m \"not gpu\"')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
